[package]
name = "rust-eth-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1.3", features = ["macros"] }
log = "0.4.8"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
pretty_env_logger = "0.4.0"
web3 = "0.17.0"